--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bs4==0.0.1
 datetime==5.5
 factor-analyzer==0.4.1
 germansentiment==1.1.0
+huggingface-hub==0.20.3
 igraph==0.10.6
 langdetect==1.0.9
 linearmodels==4.31
